# hrunting

./: README.md  main.py  parse.py  pyproject.toml  requirements.txt  server.py  test.ipynb
file_parser/: parser.py
file_parser/handlers/: doc.py  docx.py  image.py  pdf.py  plaintext.py  rtf.py  xlsx.py
tests/: doc_1.doc  doc_2.doc  docx_1.docx  docx_2.docx  rtf_1.rtf  rtf_2.rtf  txt_1.txt  txt_2.txt
