[project]
name = "hrunting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chardet>=5.0.0",
    "olefile>=0.47",
    "openpyxl>=3.1.0",
    "pdfplumber>=0.10.0",
    "opencv-python-headless>=4.8.0",
    "pillow>=10.0.0",
    "python-docx>=1.1.0",
    "striprtf>=0.0.26",
    "winrt-windows-media-ocr>=3.2.1",
    "winrt-windows-graphics-imaging>=3.2.1",
    "winrt-windows-storage-streams>=3.2.1",
    "winrt-windows-foundation>=3.2.1",
    "winrt-windows-foundation-collections>=3.2.1",
    "fastapi>=0.136.0",
    "uvicorn>=0.45.0",
]
